# haskell-dev

./: ghci.conf  scratch.cabal
app/: Hello.hs
